# hardgrad_extent

./: .gitignore  .gitmodules  Cargo.toml  EnemyRezonatorV.spvt  PlayerBullet.spvt  README.md  freetype.lib
assets/: Makefile
assets/devconf/: commands.gpu  framebuffer.pdc  game.pdc  images.pdc  renderstate.pdc
assets/graphs/: .gitkeep
assets/shaders/: BackLineDuplicator.geom  BulletVert.vert  ColoredSpriteFrag.frag  DebugTextured.vert  EnemyDuplicator.geom  EnemyRezonatorDup.geom  EnemyRezonatorV.vert  GeometryPreinstancing.vert  GridRenderV.vert  LineBurstParticleInstantiate.geom  LineBurstParticleVert.vert  Makefile  PlayerBullet.vert  PlayerRotor.vert  Quaternion.glsl  SaturatingToneMap.frag  SpriteFrag.frag  SpriteVert.vert  Textured.vert  ThroughColor.frag  UniformMemory.glsl
interlude/src/: README.md  command.rs  debug_info.rs  engine.rs  error.rs  framebuffer.rs  lib.rs  resource.rs  shading.rs  synchronize.rs  window.rs
postludium/: Cargo.toml  README.md
psdloader/: Cargo.toml
psdloader/src/: colormode.rs  imagedata.rs  layer.rs  (+3 more)
shaders/: AlphaApplier.frag  BackLineDuplicator.geom  DebugTextured.vert  EnemyDuplicator.geom  EnemyRenderV.vert  Makefile  PlayerRotor.vert  RawOutput.spv  RawOutput.vert  ThroughColor.frag  ThroughColor.spv  UniformMemory.glsl
src/: assets.rs  block_compression.rs  constants.rs  d3d12_sw.rs  descriptor.rs  epoll.rs  epoll_wp.rs  evdev.rs  framebuffer.rs  main.rs  mainframe.rs  meshstore.rs  projection_matrixes.rs  renderstate.rs  smaa_extra_textures.rs  traits.rs  udev.rs  vertex_formats.rs  vulkan.rs  xcbw.rs  xlib.rs
texture_compression/: Cargo.toml
(+91 files in other folders)
