[package]
name = "hardgrad_extent"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
publish = false

[dependencies]
nalgebra = "0.8.2"
log = "0.3.6"
rand = "0.3.14"
time = "0.1.35"
thread-scoped = "1.0.1"
glob = "*"
rayon = "0.4.0"
itertools = "0.5.2"
lazy_static = "0.2.1"
half = "0.1.0"

# interlude = { git = "https://github.com/Pctg-x8/interlude.git" }
interlude = { path = "./interlude" }
postludium = { git = "https://github.com/Pctg-x8/postludium.git" }
texture_compression = { path = "./texture_compression" }
psdloader = { path = "./psdloader" }
